jowl/Parser.jj
options
{
  //BUILD_TOKEN_MANAGER = false;
  JDK_VERSION = "1.8";
  STATIC = false;
  SUPPORT_CLASS_VISIBILITY_PUBLIC = false;
  //USER_CHAR_STREAM = true;
}

PARSER_BEGIN(Parser)
package owl.lang;

public class Parser {
  //
}
PARSER_END(Parser)

SKIP: { " " | "\r" | "\n" | "\t" }

TOKEN:
{
  <AS: "as">
| <FN: "fn">
| "." | "," | "_"
| ":" | ";"
| "(" | ")"
| "{" | "}"
| "[" | "]"
| <O: ["0"-"7"]>
| <D: ["0"-"9"]>
| <H: ["0"-"9", "a"-"f", "A"-"F"]>
| <NF: ["a"-"z"]>
| <TF: ["A"-"Z"]>
| <L: ["a"-"z", "A"-"Z", "0"-"9", "_"]>
| <NUM_DEC: (<D>)+>
| <NUM_HEX: "0x" (<H>)+>
| <NUM_OCT: "0o" (<D>)+>
| <NAME: (<NF>)(<L>)*>
| <TYPE_NAME: (<TF>)(<L>)*>
}

AstModule module(): {
  AstModule module = new AstModule();
  AstFunction f;
}
{
  (
    f = function() { module.addFunction(f); }
  )*
  { return module; }
}

AstName qualifiedName(): {
  AstName name = new AstName();
  Token tok;
}
{
  tok = <NAME> { name.name = tok.image; }
  (
    "." tok = <NAME> { name.name += "." + tok.image; }
  )*
  { return name; }
| "_"
  { return AstName.WILDCARD; }
}

AstFunction function(): {
  AstFunction function = new AstFunction();
}
{
  <FN> function.name = <NAME>.image
  "("
    (function.arguments = argumentList())?
  ")"
  (":" function.outputs = argumentList())?
  function.block = block()
  { return function; }
}

AstArgumentList argumentList(): {
  AstArgumentList argList = new AstArgumentList();
  AstArgument a;
}
{
  a = argument() { argList.add(a); }
  (
    "," a = argument() { argList.add(a); }
  )*
  { return argList; }
}

AstArgument argument(): {
  AstArgument argument = new AstArgument();
  Token tok;
}
{
  tok = <NAME> { argument.name = tok.image; } (":" argument.type = type())?
  { return argument; }
| argument.type = type()
  { return argument; }
}

AstBlock block(): {
}
{
  "{" "}"
  { return new AstBlock(); }
}

AstType type(): {
  AstType type = new AstType();
  Token tok;
}
{
  tok = <TYPE_NAME> { type.name = tok.image; }
  { return type; }
}
